Documentation edits made through Mintlify web editor

--- a/vi/03-thiet-ke/laika-global2.mdx
+++ b/vi/03-thiet-ke/laika-global2.mdx
@@ -236,12 +236,12 @@ description: "Description of your new file."
 <Tabs>
   <Tab title="Tự động hóa Liên Hệ thống">
     <Tip>
-      Bạn có thể [mở link canvas](https://kroki.io/mermaid/svg/eNqtVU1v00AQvfdXjIQEB4iqNilpI1QpSZOmSoj6EQqo4rBxtvEqzm6w1xE9cmkluLTlxImGCiFACDgh7AMHo_6P5RfwE5i1m8RJk7ZI5GDJ--bNvDc74yQSiRlD8F3WzMwASJO2aQbqxKH9t21iM1K3qKNxgI7N2sTeywtL2Bm4dSO5sJgtFm_FsRp9Jgf4_FwytbA0gueE3aD2ICKdzK30M1iM04mpHYoiG_HC-TSyUhEqqS1ZHCymigvFdATWidFq2sLljRAJfxHSJoznWs3x46hWH4hl4kLSqeY0iJwBVsgVs8VCDBt1nUzm8_2CxJDCniAkOg95EylTtYRoJd7LwnyhUFzq-3vqUm7QqtuuxxSNVWZdIpngl8vuB03xbQnRmSrSInVq5cSzEXJM5gC_ZFx0yNQCDmtyYg2gu6n03GIuDk1hWmRPuDIDDdK06UwCF6TfsRWGR6QdzRyTFoVKdq2chQSUlL8PNXweVleh8qBcyZbxtEK71IK5DGyd9eDXkfJfQYUFH7kOP8D1Uv4Rb0a9dKXg4X2Er8NbhHIJiANlM-gZJpjBSZ8QgtVtDVbN4C2Hbpg5FDTM0SG4GQbrEC61LB1dcVsWacUC4zGFRzUdE9cHOZ2XN0VwwoaJqzjSILpUC7yDrAymV_4xup9D4zXTRa2ehG5wAqsmA24q7zO_aKNcSiwv3w75eYsZLXjqKu8UixpBT8BNbBpT_nMOu8Juw0Nad5ikIREpCU1FUxnYQcQUovXkXt2eXf69fww15SF_J795f_bPm_cvRgo_CRM06Pn8Up1r_AjTTvJa3R71Oq-9nn2FrvLe8dBsSXk_OFjKf2mYEXl7KPM-5S6UUIMZTsNr1AK_DpX3XZ4zwNT0kIeMQWt2SrXaOmzqKXTkuElH-d-ghW064LAqRBOnMk8sqr-W_89oMprx0040xnhB2mzNJGhFiqDHr-U1EmzG8_yb112G7s5NrgjDAan8T9BW3id3mrEJ9uNfr2GgFjFUseHuYXLviwEG3klvDxdAee_b44I2NuNNgK3CevbxNZWMz_-GG3yQOqHurBzr7BXjnsft6kRLJnHqBZc21sL9WeNdwQwaLcG6yZT308Xk7nV34IqxSOFYrCr_M8Mu6NwSWvjElomLq37VcER5ULtBO_LiWGTX1_RcW0PTEaGA_-LW5IpX3sFfbVr8vw) để zoom xem rõ hơn
+      Bạn có thể [mở link canvas](https://kroki.io/mermaid/svg/eNqtVU1v00AQvfdXjIREDxBVbVLaRqhSkiYNShr1IxRQ1cPG2carOLvBXkftkUsrwaXAiRMNCCGoKuCEsA8cXPV_LL-An8Cs3SROmtAikYMl75s3897sjJNIJKYMwfdYIz0FIE3aommoEYf23raJzUjNoo7GAdo2axH7ICcsYadh-lZyfjFTKEzHsSrdl318bjaZml8awrPCrlO7H7GQzK70MliM07GpHYoi6_HCuQVkpSJUUluyOFhIFeYLCxFYI0azYQuX10Mk_EVIizCebTZGj6NaPSCWiQtJJ5rTIHL6WD5byBTyMWzYdTKZy_UKEkMKe4yQ6DzkjaVM1BKi5Xgv83P5fGGp5--pS7lBK26rFlM0Upl1iGSC_112L2iCb0uI9kSRFqlRKyv2h8gxmX38L-OiQyYWcFiDE6sP3UstzC5m49AEpkUOhCvTUCcNm04lcEF6HVtheERa0cwxaVEoZx6UMpCAovIPoYrP48oqlB-WypkSnpZph1owm4atiy6cv1T-ayiz4DPX4Ue4Xsp_yRtRL10peHgf4evgFqFUBOJAyQy6hglmcNIjhGBlW4MVM3jHoRNmDgUNcrQJbobB2oRLLUtHl92mRZqxwHhM_nFVx8T1QVbn5Q0RnLBB4gqONIgO1QLvIiuN6ZX_Ct3PovGq6aJWT0InOIFVkwE3lXfGr9ooFRPLy3dCfs5iRhOeusp7j0WNoCvgNjaNKf8Zhz1ht-ARrTlM0pCIlISmoqk07CBiCtHcvV-zZ5Z_Hb6CqvKQv5PbXJv5_fbj86HCu2GCOr2cX6pzjR5h2nFeK9vDXue014uv0FHeBx6aLSrvBwdL-S8MMyJvD2SuUe5CETWY4TS8QS1wfqy87_KSAaamhzxk9FuzU6xW12FTT6EjR006yv8GTWzTEYdVIRo4lTliUf21_H9Gk9GMv29HY4wXpM1WTYJWpAi6_EZeI8FmPM-_ed1j6O7S5IowHJDKP4WW8k7dScbG2I9_vQaBWsRAxYZ7gMm9LwYYeCfdA1wA5X1sjQra2Iw3Abby65knN1QyOv8bbvBJ6oS6s3Kks9eMew63qx0tmcSpF1zaWAv35wHvCGbQaAnWTaa8ny4md2-6A9eMRQrHYlX5Zwy7oHNLaOITWyaurvp1wxHlQe0GbcsxYyFl--pYRKQ8_pNb46teew9_AKMH_vI) để zoom xem rõ hơn
     </Tip>
     <Info>
       Các quy tắc kết nối Luklak với các ứng dụng và dịch vụ bên ngoài (Website, Google, SEPAY, Email...).
     </Info>
-    ![mermaid-diagram-2025-08-21-160448.png](/images/mermaid-diagram-2025-08-21-160448.png)
+    ![Laika Lien He Thong Pn](/images/laika-flagship/global/laika-lien-he-thong.png)
 
     | Rule #    | Tên Quy tắc                      | Mô tả Nghiệp vụ                                                                                                                      |
     | :-------- | :------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------- |
