Documentation edits made through Mintlify web editor

--- a/vi/03-thiet-ke/laika-global2.mdx
+++ b/vi/03-thiet-ke/laika-global2.mdx
@@ -235,12 +235,13 @@ description: "Description of your new file."
 
 <Tabs>
   <Tab title="Tự động hóa Liên Hệ thống">
-    <Tip>
-      Bạn có thể [mở link canvas](https://kroki.io/mermaid/svg/eNqtVU1v00AQvfdXjIREDxBVbVLaRqhSkiYNShr1IxRQ1cPG2carOLvBXkftkUsrwaXAiRMNCCGoKuCEsA8cXPV_LL-An8Cs3SROmtAikYMl75s3897sjJNIJKYMwfdYIz0FIE3aommoEYf23raJzUjNoo7GAdo2axH7ICcsYadh-lZyfjFTKEzHsSrdl318bjaZml8awrPCrlO7H7GQzK70MliM07GpHYoi6_HCuQVkpSJUUluyOFhIFeYLCxFYI0azYQuX10Mk_EVIizCebTZGj6NaPSCWiQtJJ5rTIHL6WD5byBTyMWzYdTKZy_UKEkMKe4yQ6DzkjaVM1BKi5Xgv83P5fGGp5--pS7lBK26rFlM0Upl1iGSC_112L2iCb0uI9kSRFqlRKyv2h8gxmX38L-OiQyYWcFiDE6sP3UstzC5m49AEpkUOhCvTUCcNm04lcEF6HVtheERa0cwxaVEoZx6UMpCAovIPoYrP48oqlB-WypkSnpZph1owm4atiy6cv1T-ayiz4DPX4Ue4Xsp_yRtRL10peHgf4evgFqFUBOJAyQy6hglmcNIjhGBlW4MVM3jHoRNmDgUNcrQJbobB2oRLLUtHl92mRZqxwHhM_nFVx8T1QVbn5Q0RnLBB4gqONIgO1QLvIiuN6ZX_Ct3PovGq6aJWT0InOIFVkwE3lXfGr9ooFRPLy3dCfs5iRhOeusp7j0WNoCvgNjaNKf8Zhz1ht-ARrTlM0pCIlISmoqk07CBiCtHcvV-zZ5Z_Hb6CqvKQv5PbXJv5_fbj86HCu2GCOr2cX6pzjR5h2nFeK9vDXue014uv0FHeBx6aLSrvBwdL-S8MMyJvD2SuUe5CETWY4TS8QS1wfqy87_KSAaamhzxk9FuzU6xW12FTT6EjR006yv8GTWzTEYdVIRo4lTliUf21_H9Gk9GMv29HY4wXpM1WTYJWpAi6_EZeI8FmPM-_ed1j6O7S5IowHJDKP4WW8k7dScbG2I9_vQaBWsRAxYZ7gMm9LwYYeCfdA1wA5X1sjQra2Iw3Abby65knN1QyOv8bbvBJ6oS6s3Kks9eMew63qx0tmcSpF1zaWAv35wHvCGbQaAnWTaa8ny4md2-6A9eMRQrHYlX5Zwy7oHNLaOITWyaurvp1wxHlQe0GbcsxYyFl--pYRKQ8_pNb46teew9_AKMH_vI) để zoom xem rõ hơn
-    </Tip>
     <Info>
       Các quy tắc kết nối Luklak với các ứng dụng và dịch vụ bên ngoài (Website, Google, SEPAY, Email...).
     </Info>
+    <Tip>
+      Bạn có thể [mở link canvas](https://kroki.io/mermaid/svg/eNqtVU1v00AQvfdXjIREDxBVbVLaRqhSkiYNShr1IxRQ1cPG2carOLvBXkftkUsrwaXAiRMNCCGoKuCEsA8cXPV_LL-An8Cs3SROmtAikYMl75s3897sjJNIJKYMwfdYIz0FIE3aommoEYf23raJzUjNoo7GAdo2axH7ICcsYadh-lZyfjFTKEzHsSrdl318bjaZml8awrPCrlO7H7GQzK70MliM07GpHYoi6_HCuQVkpSJUUluyOFhIFeYLCxFYI0azYQuX10Mk_EVIizCebTZGj6NaPSCWiQtJJ5rTIHL6WD5byBTyMWzYdTKZy_UKEkMKe4yQ6DzkjaVM1BKi5Xgv83P5fGGp5--pS7lBK26rFlM0Upl1iGSC_112L2iCb0uI9kSRFqlRKyv2h8gxmX38L-OiQyYWcFiDE6sP3UstzC5m49AEpkUOhCvTUCcNm04lcEF6HVtheERa0cwxaVEoZx6UMpCAovIPoYrP48oqlB-WypkSnpZph1owm4atiy6cv1T-ayiz4DPX4Ue4Xsp_yRtRL10peHgf4evgFqFUBOJAyQy6hglmcNIjhGBlW4MVM3jHoRNmDgUNcrQJbobB2oRLLUtHl92mRZqxwHhM_nFVx8T1QVbn5Q0RnLBB4gqONIgO1QLvIiuN6ZX_Ct3PovGq6aJWT0InOIFVkwE3lXfGr9ooFRPLy3dCfs5iRhOeusp7j0WNoCvgNjaNKf8Zhz1ht-ARrTlM0pCIlISmoqk07CBiCtHcvV-zZ5Z_Hb6CqvKQv5PbXJv5_fbj86HCu2GCOr2cX6pzjR5h2nFeK9vDXue014uv0FHeBx6aLSrvBwdL-S8MMyJvD2SuUe5CETWY4TS8QS1wfqy87_KSAaamhzxk9FuzU6xW12FTT6EjR006yv8GTWzTEYdVIRo4lTliUf21_H9Gk9GMv29HY4wXpM1WTYJWpAi6_EZeI8FmPM-_ed1j6O7S5IowHJDKP4WW8k7dScbG2I9_vQaBWsRAxYZ7gMm9LwYYeCfdA1wA5X1sjQra2Iw3Abby65knN1QyOv8bbvBJ6oS6s3Kks9eMew63qx0tmcSpF1zaWAv35wHvCGbQaAnWTaa8ny4md2-6A9eMRQrHYlX5Zwy7oHNLaOITWyaurvp1wxHlQe0GbcsxYyFl--pYRKQ8_pNb46teew9_AKMH_vI) để zoom xem rõ hơn
+    </Tip>
+    
     ![Laika Lien He Thong Pn](/images/laika-flagship/global/laika-lien-he-thong.png)
 
     | Rule #    | Tên Quy tắc                      | Mô tả Nghiệp vụ                                                                                                                      |
@@ -255,6 +256,11 @@ description: "Description of your new file."
     <Info>
       Các quy tắc điều phối và luân chuyển công việc giữa các bộ phận khác nhau _bên trong_ nền tảng Luklak.
     </Info>
+    <Tip>
+      Bạn có thể [mở link canvas](https://kroki.io/mermaid/svg/eNqtVl9rI1UUf--nOCDsttistmnsbpBCkiZNTJrWZNpVFh9uJrczlyT3xskk28I-uBRWUJB29UVl2c0W8Q8sVPRBMqAPU_o9xi-gH8Fz7ySZmWRSF7EPQ-eee87vd37nTyaRSCzpgh8xI70EYJu0Q9PQID06eTskFiONNu1JO0DXYh1ineREW1hpuP1GMnU3UyjcDts0emxP7etryY3UvYg9K6wmtaY3NpPZ7UmENuM0NnSPIslmGDi3iV4bvtWmls3CxsJGIVXY9I0NorcMS_R5U1nUn2_pEMazLWP22MeaGEKRuLDpwuSkEX2mtny2kCnkQ7Zo1slkLjcBJLotrBgi_rnyi3VZyEVZK2Et8-v5fOHeJL-P-5TrtNrvNEKMZpDZgNhM8JtpTy4tyLstRHchyTZp0HZWHEecQzSn9hvaRV5ZCNBjBiftqemdjc21u9mwaYFnm5yIvp2GJjEsupTAAZkots3wiHT8nmN2m0IlUypnIAFFz3kCGj7PqjtQOShXMmU8rdABbcN6GurXQ7g695wvocLcnzjkTM_5UQd-dcoNX8u-Lbiqh3oNqgjlIpAelE13qJtgui_GDn5ri2OwjAZZXk-lViF4vH0ntSIpfYoj7Dnn3IBKv9UmLZ-uclXzSHBsdNYl3IbdsiZxdjO1cl4rVXfebVhvbf39_PvPkCvzRn9waHrO50jhEcjTv377AjLN2Ei52q5iXKoWYXsvUy0GoeaymPPVasrXG_0O2p77uBr4YjoXXV9EzCdgsa_o9THTfmzIeu1QhtSKJci5X4UTK5ve6EJAzx3a43igmQx099cF7Lbr1XEo5KcplkE0TfGwoYXPEL2cwL7p2rHx9mvvyXjvH3ijl1WouM9g23MuIZI2nvwM7pDHy1U_kAFy9XIxXK-r0w5m9YuufChv_peGyco25YZwX7BY6PwHql9u9IlAV3EHghhQ2dGr2CNpHBPPeYrjsoaTsoPCc6zHKw63MIP-ieeccjAYEThExA9TLia2tt5E4DRcnTHPeczhSFgdsC2Je582esym6ibeSci7CuYBWkwhWh8pif588hQ0bzQUEN-RTTpea1RGCZhbzDBtEEfgU0dO2IvXl9iUOv5qSQItVX5b1kt26dfcUIADz_mW-WCZJqrTlw0MyzhvK3dmETF2nGB4vIptHCi2jorJFXKOeNeXMPBG30ndspiF0kz5o5cvglZDEeayxR7NFbHzfqhC1nPUfL3cR2EVQqxWkQmco67VIqiK7_-BGprSWUzECOTCFwWMQxoAhwe8uOd-UsXhxWcxhGTKcYeGi3i6KfBTgnQiszwLivHjaoTNsorzHNQoiTXSTMJNsAXOL5YH6TjPGXaIzC0y19N-VaWa9CvU8_uZD2fC2FJGM7Sk0Ef5KvAHMVsRU786c08x8wNYlkpf2LC2Eqt1hFRMcUNHCBcnAx5Hh3tD8reYGueWSVgUA6_PFm1iR9q7nvNNKZboaxcIX0KbYGYpI0Q9U8nXoZY_LOXvB0g7nvOKSamnrdHxnGcMLDpg9OFrTu2cFCn5nSDkjI6LeCu0q-c30UQbXPIx2izoZiWR-gkyBf6PAeN-E8Lk6wdRtKlQ_46Ww33d9de2jXvHHeIqxo8EGIi-bo6_ZGZ0-ge5s2Ct) để zoom xem rõ hơn
+    </Tip>
+    ![Laika Lien Chuc Nang Pn](/images/laika-flagship/global/laika-lien-chuc-nang.png)
+
     | Rule #    | Tên Quy tắc                          | Mô tả Nghiệp vụ                                                                                                                       |
     | :-------- | :----------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------ |
     | **CF-03** | Chốt Tư vấn, Tạo Hợp đồng & Khảo sát | Trạng thái của `CRM/🧊Khách hàng` thay đổi sẽ tự động tạo `Contract & Invoice/🧊Hợp đồng` và `Site Survey & Construction/🧊Khảo sát`. |
