Documentation edits made through Mintlify web editor

--- a/vi/03-thiet-ke/laika-mkt.mdx
+++ b/vi/03-thiet-ke/laika-mkt.mdx
@@ -108,6 +108,11 @@ title: "Chức năng Chiến dịch Marketing"
 ---
 
 ## **TỰ ĐỘNG HÓA**
+<Tip>
+  Bạn có thể [mở chế độ xem canvas này](https://kroki.io/mermaid/svg/eNqVVt1qG1cQvvdTDBQqm0ZubVlxIopBWlt20U_csE4oJpSj3ZPdg1Z7lNVKtaA3xZBCC22cUmhpi-2aEprEkBQKjfYiF2v6HpsXaB-hc85qpbPyKri-EPLOfPPNzDczq3w-v2Bw9z6zSgsAvk07tAQt0qPJf3eIx0jLoT1hB-h6rEO8ocYd7pUg906heKNcreZUm04P_Il9daWwVryZsle4Z1Jv4rFeqGwmERzm0szQPYpJmiqxto6otdjqU89nqrG6Vi1W12Njixhty-N915QW-RdbOoS5lbY1-zjmSgxKJJf7dG5xwoiYiW2rUi1XtxRbuupCQdMSQmL43MtIJH4ucZmQublIa13t5dbq1lb1ZlLfgz51Ddrsd1pKRjPMbEB8xt23p504zanb4bw7N0mHtKhT4QcpsJLmxP6WcREucwl6zHKJMzFdX1tfuVFRTXOQDhnyvl8Ck1geXcjjgiQd22T4iHTimWO-Q6Fe_qhWhjzsRMFD0PHzUXMb6nu1ermGT-t0QB0olECzo-B3A9yLQ9eCBvHa1Gf4TSOdLsFUenE_-z53pSYLUxVBu9MA0sMI_WH41IUBE5-TEIqjvisdde_vF1FwjNG7dviHShdHbfED8KwWWVwtFq_B9OOD5eLS1fKUq0xw4wzWJa4P2mZTEP97_OQrDMCi0WsXzCj42rAz3T_Wyon7P399A2Uz06uu3xZeb759AXUZC3wvfO7GIalr_t9i2nZ4amQy3dJ34gZnel-NCoX_Es9lFBwhuCIUci0enrBMwrtbFUF4l7Z6zB-PUJqrifcC-IBK9a-hsCWcqSh4jLO1gmNVQ6JjBn40OuXwLuza4VMw-0PMAbvbj0ZnmIQRnnIZCyPkNzbeQ5FKoEtEWiPoRMFPcaImHa80FZouqHAULYGXzRgCi7qHD5DLx26xElSi0a9NaO6EX-wuSSyC8giW2P0YLJElRfx7H7a89zfePHyM0YOXcHEUBT-KkNI7R8xP23SYmzbFY5btA78PMmgDnX3ohGfiVcXBDP9kohHg2tHoNx8WB3jyGzU9v1q4viR5Lo7EcpwZ4_iC7RAsm0nEuVCtHwXfueBQYi6rDZB021Fwziadni1fwyH4GTb3PsFToMcNQOUSbEokbOEs-uJReJgGK2pghKzBkJomg7GKg6FhEd24Fh8HAzv6PTLgtJx1heriIpxfUjUF8uX1-AVRuQQg5_qlbNnrnKprPFP7Kl5VdjkrQEruaXJG4uqI3cm4JDg4o1cZYyBTyE4VjCh4QrKCzY6COnfhuYunhoenOAQoEFvO2oyryYOHZSpPQchjC_0PXbAY4fhyICYWzqHGkNLkZHzcxtrglcDmTtsJn8POrWh0ouOoRMEPze1pK_F0jU6H8EBZfax09MwVZYmyP4tPjQQM5O7Gi4VycwTs6Y3ZkpA9Lgm_SK1lMft4s2zO2_egyr0OTFpoicVQlBW7JfteE3fUBjs8QRqVOUNKyRBv9GVsfHHS6ysJ4woM9XhP-wmL2u3G0niRMX5-MvSXz1GKb9rbunzftrGN_rgARZLxuZh3nlJvBTN8hZ9J36PgmVBFNHM8jeIS-eFz0dVwhJ6XaWAQnkhnR8nJJgx_ZolJxZ8GyGcsZ03nzCNsxX_7qFKP) để đọc dễ hơn
+</Tip>
+
+![Laika Mkt Sequence Pn](/images/laika-flagship/mkt-campaign/laika-mkt-sequence.png)
 
 <Tabs>
   <Tab title="Trong Chức năng">
