Documentation edits made through Mintlify web editor

--- a/vi/02-platform/index.mdx
+++ b/vi/02-platform/index.mdx
@@ -4,17 +4,17 @@ description: "Tìm hiểu tổng quan bố cục & khả năng của hệ thốn
 sidebarTitle: "Luklak Platform"
 ---
 
-
-
 <Frame>
-![Luklakplatformarchitecture VN Pn](/images/Luklakplatformarchitecture-VN.png)
+  ![Luklakplatformarchitecture VN Pn](/images/Luklakplatformarchitecture-VN.png)
 </Frame>
 
 > LUKLAK được xây dựng với kiến trúc platform với những miếng lego lõi đủ phổ quát để doanh nghiệp tự tay kéo thả tạo nên các chức năng, ứng dụng quản trị vận hành theo nhu cầu đặc thù mà không-cần-code
 
 <Frame caption="Kiến trúc hệ thống LUKLAK, từ nguyên liệu, thiết kế đến sử dụng">
-  ![kien-truc-he-thong-luklak](/images/platform-structure.png)
+![image.png](/images/image.png)
 </Frame>
+
+
 
 ## Tầng 1: Các miếng lego lõi
 
