Documentation edits made through Mintlify web editor

--- a/vi/02-platform/index.mdx
+++ b/vi/02-platform/index.mdx
@@ -11,7 +11,7 @@ sidebarTitle: "Luklak Platform"
 > LUKLAK được xây dựng với kiến trúc platform với những miếng lego lõi đủ phổ quát để doanh nghiệp tự tay kéo thả tạo nên các chức năng, ứng dụng quản trị vận hành theo nhu cầu đặc thù mà không-cần-code
 
 <Frame caption="Kiến trúc hệ thống LUKLAK, từ nguyên liệu, thiết kế đến sử dụng">
-![image.png](/images/image.png)
+  ![Luklak Lop 1 Xay Dung Pn](/images/01-platform/luklak-lop-1-xay-dung.png)
 </Frame>
 
 
